5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1714_2528.log
== TEST (2019-05-13 15:14:27) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:17:12) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:51:19) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:01) 
-- CODE:
x = int(input())

expoente = len(str(x))
print(expoente)
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

while():
-- ERROR:
File "XXXX", line 18
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:08) 
-- CODE:
x = int(input())

expoente = len(str(x))
print(expoente)
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
1
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 15:53:15) 
-- CODE:
x = int(input())

expoente = len(str(x))
print(expoente)
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
1
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 15:59:40) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	x1 = x1 % 10
	s = s + (x1 ** expoente)

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")
-- EXECUTION TIME:
0.203001
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:22:39) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	s = s + ((x1 % 10) ** expoente)
	x1 = x1 // 10

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:23:01) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	s = s + ((x1 % 10) ** expoente)
	x1 = x1 // 10

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:23:06) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	s = s + ((x1 % 10) ** expoente)
	x1 = x1 // 10

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:23:12) 
-- CODE:
x = int(input())

expoente = len(str(x))
s = 0

x1 = x
while(x1 != 0):
	s = s + ((x1 % 10) ** expoente)
	x1 = x1 // 10

if(s == x):
	print("ARMSTRONG")
else:
	print("NAO ARMSTRONG")

-- OUTPUT:
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:26:04) 
-- CODE:
x = 0

while(x >= 0):
	x = int(input())

	expoente = len(str(x))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:28:51) 
-- CODE:
x = 0

while(x >= 0):
	x = int(input())

	expoente = len(str(x))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:28:59) 
-- CODE:
x = 0

while(x >= 0):
	x = int(input())

	expoente = len(str(x))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:29:35) 
-- CODE:
x = 0

while(x >= 0):
	x = int(input())

	expoente = len(str(x))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- OUTPUT:
ARMSTRONG
ARMSTRONG
ARMSTRONG
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:39:02) 
-- CODE:
x = 0

while(x >= 0):
	x = int(input())

	expoente = len(str(x))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
-- EXECUTION TIME:
424.659
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:52:29) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array()

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = x

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == x):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
0.565615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1714/2528/main.py", line 5, in <module>
    n = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:55:20) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array()

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
0.437611
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1714/2528/main.py", line 5, in <module>
    n = array()
TypeError: Required argument 'object' (pos 1) not found

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:55:23) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array()

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:55:39) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array([])

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 12:55:45) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array([])

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
0.596925
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1714/2528/main.py", line 9, in <module>
    n[c] = x
IndexError: index 0 is out of bounds for axis 0 with size 0

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:55:48) 
-- CODE:
from numpy import*

x = 0
c = 0
n = array([])

while(x >= 0):
	x = int(input())
	n[c] = x
	c = c + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:59:18) 
-- CODE:
from numpy import*

x = 0
n = array([])

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 12:59:36) 
-- CODE:
from numpy import*

x = 0
n = array([])

while(x >= 0):
	x = int(input())
	n.add(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:02:34) 
-- CODE:
from numpy import*

x = 0
d = 0
n = array([])

while(x >= 0):
	x = int(input())
	n[d] = x
	d = d + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:04:30) 
-- CODE:
from numpy import*

x = 0
d = 0
n = array([0, 0, 0])

while(x >= 0):
	x = int(input())
	n[d] = x
	d = d + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:05:10) 
-- CODE:
from numpy import*

x = 0
d = 0
#n = array([])

while(x >= 0):
	x = int(input())
	n[d] = x
	d = d + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:16:47) 
-- CODE:
x = 0
d = 0
n = []

while(x >= 0):
	x = int(input())
	n[d] = x
	d = d + 1

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n[d] = x
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:17:41) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n[d] = x
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:18:12) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n[d] = x
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:19:31) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n[d] = x
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:20:42) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
164.924
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:20:42) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
21.3147
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: container_linux.go:296: starting container process caused "process_linux.go:86: executing setns process caused \"exit status 21\"": unknown
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
153.139
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
147.914
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
147.389
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
OCI runtime exec failed: exec failed: cannot exec a container that has stopped: unknown
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
147.241
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
task e97927b1b50ae3683989dd5733a83a2bf7ae239f147ce9193aa3efad5f82d236 not found: not found
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
147.12
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:

-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:24:19) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
146.996
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:

-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:

-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 13:25:45) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    n[d] = x
IndexError: list assignment index out of range
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:27:11) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	if(x >= 0):
		n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
0.386521
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 13:37:01) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
684.073
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 18:01:08) 
-- CODE:
x = 0
n = []

while(x >= 0):
	x = int(input())
	if(x >= 0):
		n.append(x)

c = 0
while(c < len(n)):
	expoente = len(str(n[c]))
	s = 0
	x1 = n[c]

	while(x1 != 0):
		s = s + ((x1 % 10) ** expoente)
		x1 = x1 // 10

	if(s == n[c]):
		print("ARMSTRONG")
	else:
		print("NAO ARMSTRONG")
		
	c = c + 1
-- EXECUTION TIME:
0.216443
-- TEST CASE 1:
---- input:
0
1
153
-1
---- correct output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
---- user output:
ARMSTRONG
ARMSTRONG
ARMSTRONG
-- TEST CASE 2:
---- input:
100
101
102
103
-1
---- correct output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
---- user output:
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
NAO ARMSTRONG
-- TEST CASE 3:
---- input:
1634
1635
8208
8209
-1
---- correct output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
---- user output:
ARMSTRONG
NAO ARMSTRONG
ARMSTRONG
NAO ARMSTRONG
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
